# wiener-snake

./: .gitignore  README.md  agent.py  animation.py  mise.toml  neurons.py  pyproject.toml  snake.py
.zed/: settings.json
media/scripts/: video-script.md
media/videos/animation/1080p60/partial_movie_files/SnakeAIExplainer/: partial_movie_file_list.txt
models/: model.pth
